# Xbot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cortex.toml  docker-compose.yml  echo_cli.py  echo_config.json  run_echo.py  xbot-cortex-tasks.md
backend/: pyproject.toml
backend/app/db/: client.py  queries.py  schema.surql  seed.py
backend/tests/: conftest.py  test_client.py  test_integration.py  test_queries.py  test_seed.py
echo/: auth.py  config.py  orchestrator.py  pyproject.toml  xbot_process.py
echo/analytics/: __init__.py  csv_import.py  followers.py  pull.py  scraper.py
echo/cli/: __init__.py  app.py  commands.py  editor.py  rendering.py
echo/compose/: __init__.py  generator.py  prompt.py  strategies.py  validation.py
echo/compose/tests/: test_prompt.py  test_strategies.py  test_validation.py
echo/context/: __init__.py  brief_generator.py  cache.py  engagement.py  enrichment.py
echo/db/: __init__.py  cortex.py  database.py  models.py  store.py
echo/evolve/: __init__.py  analyser.py  collector.py  digest.py  store.py  voice_evolver.py  weight_updater.py
echo/oauth/: __init__.py  client.py  login.py  storage.py
echo/publish/: __init__.py  errors.py  poster.py  rate_limiter.py
echo/scorer/: __init__.py  author.py  content.py  embeddings.py  momentum.py  pipeline.py  recency.py  weights.py
echo/scout/: __init__.py  dedup.py  extraction.py  filters.py  keywords.py  poller.py
echo/voice/: __init__.py  analyser.py  bootstrap.py  profile.py
echo/xbot/: __init__.py  client.py
faultline/: .env.example  .gitignore  README.md  docker-compose.yml
skills/: compose-tweets.md  research-tweets.md  x-analytics.md
supabase/: config.toml
(+101 files in other folders)
